| Summary: | ASTERISK-28774: chan_pjsip's rtptimeout is erroneously triggered during direct-media (native_rtp) bridge | ||
| Reporter: | Michael Neuhauser (mneuhauser) | Labels: | |
| Date Opened: | 2020-03-06 10:15:00.000-0600 | Date Closed: | 2020-03-20 10:18:15 |
| Priority: | Minor | Regression? | |
| Status: | Closed/Complete | Components: | Channels/chan_pjsip Resources/res_pjsip_sdp_rtp |
| Versions: | 16.8.0 | Frequency of Occurrence | Constant |
| Related Issues: | |||
| Environment: | Attachments: | ||
| Description: | 2 PJSIP endpoints with identical configuration (codec, etc.) and
direct_media=yes rtp_timeout=10 rtp_timeout_hold=10 When those two endpoints are bridged (via simple Dial()) the RTP is flowing directly between them, not through Asterisk. But the code that checks for a RTP timeout is still active and erroneously terminates the connection after same time. This happens because the function rtp_check_timeout() in res/res_pjsip_sdp_rtp.c ignores the direct-media state of the endpoint (can be checked via session_media->direct_media_addr). I have a small patch that fixes this bug and will add a gerrit code review for it. | ||
| Comments: | By: Asterisk Team (asteriskteam) 2020-03-06 10:15:01.445-0600 Thanks for creating a report! The issue has entered the triage process. That means the issue will wait in this status until a Bug Marshal has an opportunity to review the issue. Once the issue has been reviewed you will receive comments regarding the next steps towards resolution. A good first step is for you to review the [Asterisk Issue Guidelines|https://wiki.asterisk.org/wiki/display/AST/Asterisk+Issue+Guidelines] if you haven't already. The guidelines detail what is expected from an Asterisk issue report. Then, if you are submitting a patch, please review the [Patch Contribution Process|https://wiki.asterisk.org/wiki/display/AST/Patch+Contribution+Process]. Please note that once your issue enters an open state it has been accepted. As Asterisk is an open source project there is no guarantee or timeframe on when your issue will be looked into. If you need expedient resolution you will need to find and pay a suitable developer. Asking for an update on your issue will not yield any progress on it and will not result in a response. All updates are posted to the issue when they occur. By: Joshua C. Colp (jcolp) 2020-03-06 10:45:31.929-0600 I'm marking this as in feedback until you've placed your patch up. Once that is done comment here and this issue will go back to triage. By: Michael Neuhauser (mneuhauser) 2020-03-06 11:01:03.575-0600 The review is up. I'm not sure about "cherry-picking" (who does it, which branches, at which point in the work flow) - so only branch 16 for now. By: Joshua C. Colp (jcolp) 2020-03-06 11:04:20.426-0600 You can do it if you wish, or wait until it is reviewed and then do it. It goes into all supported applicable branches, which would be additionally 13, 17, and master. By: Friendly Automation (friendly-automation) 2020-03-20 10:18:16.476-0500 Change 13976 merged by George Joseph: chan_psip, res_pjsip_sdp_rtp: ignore rtptimeout if direct-media is active [https://gerrit.asterisk.org/c/asterisk/+/13976|https://gerrit.asterisk.org/c/asterisk/+/13976] By: Friendly Automation (friendly-automation) 2020-03-20 10:18:30.402-0500 Change 13860 merged by George Joseph: chan_psip, res_pjsip_sdp_rtp: ignore rtptimeout if direct-media is active [https://gerrit.asterisk.org/c/asterisk/+/13860|https://gerrit.asterisk.org/c/asterisk/+/13860] By: Friendly Automation (friendly-automation) 2020-03-20 10:18:49.039-0500 Change 13977 merged by George Joseph: chan_psip, res_pjsip_sdp_rtp: ignore rtptimeout if direct-media is active [https://gerrit.asterisk.org/c/asterisk/+/13977|https://gerrit.asterisk.org/c/asterisk/+/13977] By: Friendly Automation (friendly-automation) 2020-03-20 10:19:05.407-0500 Change 13978 merged by George Joseph: chan_psip, res_pjsip_sdp_rtp: ignore rtptimeout if direct-media is active [https://gerrit.asterisk.org/c/asterisk/+/13978|https://gerrit.asterisk.org/c/asterisk/+/13978] | ||